# caffe_cpp_app_cmake

./: CMakeLists.txt  CMakelists.txt  README.md
cmake/: Dependencies.cmake  README.md
cmake/Modules/: FindvecLib.cmake
src/: config.hpp.in  main.cpp
